deploy/yc-sirius/ubuntu-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu
  labels:
    app: ubuntu
spec:
  volumes:
  - name: secret-volume
    secret:
      secretName: dotfile-secret
  containers:
  - image: ubuntu:20.04
    command: ["/bin/sh","-c"]
    args: ["apt-get update; apt-get install -y postgresql-client && sleep 604800"]
    imagePullPolicy: IfNotPresent
    name: ubuntu
    volumeMounts:
    - name: secret-volume
      readOnly: true
      mountPath: "/root/.postgresql/"
  restartPolicy: Always
