deploy/yc-sirius/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31577
  selector:
    app: django
